feat: added OAuth scopes
